# c_minecraft_protocol

./: .gitignore  CMakeLists.txt
cmake/: utilities.cmake
src/: CMakeLists.txt
src/executable/: CMakeLists.txt  connection.c  connection.h  main.c  main.cpp  socket_utils.h
src/executable/type/: mc_string.c  mc_string.h  util_types.h  var_numbers.c  var_numbers.h
src/executable/utils/: buffer.c  buffer.h
